
Version 1.3.6 (r493) released 16 July 2013

    - Fix use of MAX_HOST_NAME in http_io.c (issue #42)
    - Fix encryption key generation bug (on some systems)

Version 1.3.5 (r485) released 29 May 2013

    - Check for duplicate mount at startup (issue #10)
    - Remove obsolete backward-compatibility block size check

Version 1.3.4 (r476) released 2 Apr 2013

    - Support FUSE fallocate() call to zero unused blocks

Version 1.3.3 (r463) released 7 Apr 2012

    - Fix bug in validation of --baseURL parameter (issue #34)
    - Accept 404 Not Found as a valid response to a DELETE (issue #35)
    - Added a fix for building on Mac OS X (issue #32)

Version 1.3.2 (r451) released 14 May 2011

    - Added `--directIO' flag to disable kernel caching of the backed file.
    - Fixed bug where the stats file was not up to date (issue #26).
    - Fixed bug with `--blockCacheMaxDirty' not working (issue #25).
    - Added automatic block cache disk file resizing (issue #23).
    - Added `--maxUploadSpeed' and `--maxDownloadSpeed' flags.
    - Added `-rrs' flag to support Reduced Redundancy Storage.
    - Fixed missing warning for `--baseURL' when missing trailing slash.

Version 1.3.1 (r413) released 19 Oct 2009

    - Added `--blockCacheMaxDirty' flag.
    - Fixed cURL handle leak when cancelling in-progress writes.
    - Updated Mac OS X build instructions and added Snow Leopard support.

Version 1.3.0 (r392) released 27 Sep 2009

    - Added support for local cache files that can persist across restarts.
    - Added built-in support for encryption and authentication.
    - In-progress writes are now cancelled when a duplicate write occurs.
    - Changed default for `--blockCacheWriteDelay' from zero to 250ms.
    - Fix obscure and unlikely deadlock bug in ec_protect.c.
    - Allow configurable compression level via --compress=LEVEL.
    - Fix bug that caused spurious "impossible expected MD5" log messages.

Version 1.2.3 (r333) released 15 May 2009
