@@ -1,4 +1,8 @@
 
+Version Next
+
+    - Add `--keyLength' for overriding generated encryption key length
+
 Version 1.3.6 (r493) released 16 July 2013
 
     - Fix use of MAX_HOST_NAME in http_io.c (issue #42)
